update experiment notebook with exp 2b

--- a/regularization_shapes/regularization_shapes.ipynb
+++ b/regularization_shapes/regularization_shapes.ipynb
@@ -774,135 +774,140 @@
     "    weight_index = 0\n",
     "else:\n",
     "    list_weights = []\n",
+    "\n",
+    "for dim_h in [16, 256]:\n",
     "    \n",
-    "for ln in [[0,0,0,0.,0.], [reg_scale,0.,0.,0.,0.], [0.,reg_scale,0.,0.,0.],\\\n",
-    "            [0.,0.,reg_scale,0.,0.], [0.,0.,0.,reg_scale,0.], [0.,0.,0.,0.,reg_scale], None]:\n",
+    "    exp_num = 3 if dim_h==256 else 2\n",
     "    \n",
-    "    if ln is None:\n",
-    "        ln = [0.,0.,0.,0.,0.]\n",
-    "        dropout_rate = 0.330\n",
-    "        print(\"using dropout with rate {}\".format(dropout_rate))\n",
-    "    else:\n",
-    "        dropout_rate = 0\n",
-    "        \n",
-    "    for my_seed in [13, 1337, 42]:\n",
-    "        np.random.seed(my_seed)\n",
-    "        weights = get_deep_weights(dim_h=32)\n",
+    "    for ln in [[0,0,0,0.,0.], [reg_scale,0.,0.,0.,0.], [0.,reg_scale,0.,0.,0.],\\\n",
+    "                [0.,0.,reg_scale,0.,0.], [0.,0.,0.,reg_scale,0.], [0.,0.,0.,0.,reg_scale], None]:\n",
     "\n",
-    "        train_losses = []\n",
-    "        val_losses = []\n",
-    "        train_accuracies = []\n",
-    "        val_accuracies = []\n",
-    "        epochs = []\n",
+    "        if ln is None:\n",
+    "            ln = [0.,0.,0.,0.,0.]\n",
+    "            dropout_rate = 0.330\n",
+    "            print(\"using dropout with rate {}\".format(dropout_rate))\n",
+    "        else:\n",
+    "            dropout_rate = 0\n",
     "\n",
-    "        for step in range(num_steps):\n",
+    "        for my_seed in [13, 1337, 42]:\n",
+    "            np.random.seed(my_seed)\n",
+    "            weights = get_deep_weights(dim_h=dim_h)\n",
     "\n",
-    "            if step % disp_every == 0.0:\n",
+    "            train_losses = []\n",
+    "            val_losses = []\n",
+    "            train_accuracies = []\n",
+    "            val_accuracies = []\n",
+    "            epochs = []\n",
     "\n",
-    "                train_pred = deep_forward(train_x, weights)\n",
-    "                train_loss = cross_entropy(train_pred, train_y)\n",
+    "            for step in range(num_steps):\n",
     "\n",
-    "                val_pred = deep_forward(val_x, weights)\n",
-    "                val_loss = cross_entropy(val_pred, val_y)\n",
+    "                if step % disp_every == 0.0:\n",
     "\n",
-    "                train_accuracy = get_deep_accuracy(train_x, weights, train_y)\n",
-    "                val_accuracy = get_deep_accuracy(val_x, weights, val_y)\n",
+    "                    train_pred = deep_forward(train_x, weights)\n",
+    "                    train_loss = cross_entropy(train_pred, train_y)\n",
     "\n",
-    "                if(0): # reach unreachable code below for progress reports \n",
-    "                    print(\"training step {}\\n\".format(step))\n",
-    "                    print(\"  training loss: {:.3e}\".format(train_loss))\n",
-    "                    print(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
-    "                    print(\"  validation loss: {:.3e}\".format(val_loss))\n",
-    "                    print(\"    validation accuracy: {:.3f}\".format(val_accuracy))\n",
+    "                    val_pred = deep_forward(val_x, weights)\n",
+    "                    val_loss = cross_entropy(val_pred, val_y)\n",
     "\n",
-    "                train_losses.append(train_loss)\n",
-    "                val_losses.append(val_loss)\n",
-    "                train_accuracies.append(train_accuracy)\n",
-    "                val_accuracies.append(val_accuracy)\n",
-    "                epochs.append(step)\n",
-    "            \n",
-    "            #import pdb; pdb.set_trace()\n",
-    "            grads = get_deep_grad(train_x, weights, train_y, l_n=ln, dropout=dropout_rate)\n",
+    "                    train_accuracy = get_deep_accuracy(train_x, weights, train_y)\n",
+    "                    val_accuracy = get_deep_accuracy(val_x, weights, val_y)\n",
     "\n",
-    "            for ii in range(len(weights)):\n",
-    "                weights[ii] -=  learning_rate * grads[ii]\n",
-    "                # / (1-dropout_rate)\n",
+    "                    if(0): # reach unreachable code below for progress reports \n",
+    "                        print(\"training step {}\\n\".format(step))\n",
+    "                        print(\"  training loss: {:.3e}\".format(train_loss))\n",
+    "                        print(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
+    "                        print(\"  validation loss: {:.3e}\".format(val_loss))\n",
+    "                        print(\"    validation accuracy: {:.3f}\".format(val_accuracy))\n",
     "\n",
-    "        list_weights.append(weights)\n",
+    "                    train_losses.append(train_loss)\n",
+    "                    val_losses.append(val_loss)\n",
+    "                    train_accuracies.append(train_accuracy)\n",
+    "                    val_accuracies.append(val_accuracy)\n",
+    "                    epochs.append(step)\n",
     "\n",
-    "        l_type = \"L\" + str(np.argmax(ln)) if np.sum(ln) else \"noreg\"\n",
-    "        if l_type == 4:\n",
-    "            l_type = \"sup\"\n",
-    "        elif dropout_rate:\n",
-    "            l_type = \"dropout\"\n",
+    "                #import pdb; pdb.set_trace()\n",
+    "                grads = get_deep_grad(train_x, weights, train_y, l_n=ln, dropout=dropout_rate)\n",
     "\n",
-    "        all_params = get_all_params(weights) \n",
+    "                for ii in range(len(weights)):\n",
+    "                    weights[ii] -=  learning_rate * grads[ii]\n",
+    "                    # / (1-dropout_rate)\n",
     "\n",
-    "        all_params[all_params < 1e-3] = 0.0\n",
-    "        my_mean = np.mean(all_params)\n",
-    "        my_min = np.min(all_params)\n",
-    "        my_max = np.max(all_params)\n",
+    "            list_weights.append(weights)\n",
     "\n",
-    "        num_zeros = all_params.shape[0] - np.sum(np.sign(np.abs(all_params)))\n",
+    "            l_type = \"L\" + str(np.argmax(ln)) if np.sum(ln) else \"noreg\"\n",
+    "            if l_type == 4:\n",
+    "                l_type = \"sup\"\n",
+    "            elif dropout_rate:\n",
+    "                l_type = \"dropout\"\n",
     "\n",
-    "        print(\"min/max/mean magnitude and number of zeros:\")\n",
-    "        print(\"  {:.3e}/{:.3e}/{:.3e} and {}\"\\\n",
-    "              .format(my_min, my_max, my_mean, num_zeros))\n",
+    "            all_params = get_all_params(weights) \n",
     "\n",
-    "        print(\"training step {}\\n\".format(step))\n",
-    "        print(\"  training loss: {:.3e}\".format(train_loss))\n",
-    "        print(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
-    "        print(\"  validation loss: {:.3e}\".format(val_loss))\n",
-    "        print(\"    validation accuracy: {:.3f}\".format(val_accuracy))\n",
+    "            all_params[all_params < 1e-3] = 0.0\n",
+    "            my_mean = np.mean(all_params)\n",
+    "            my_min = np.min(all_params)\n",
+    "            my_max = np.max(all_params)\n",
     "\n",
-    "        np.save(\"./weights/exp2_{}_sd{}.npy\".format(l_type, my_seed), weights)\n",
-    "        np.save(\"./results/exp2_accuracy_{}_sd{}.npy\".format(l_type, my_seed),\\\n",
-    "                [epochs, train_accuracies, val_accuracies])\n",
-    "        np.save(\"./results/exp2_losses_{}_sd{}.npy\".format(l_type, my_seed),\\\n",
-    "                [epochs, train_losses, val_losses])\n",
+    "            num_zeros = all_params.shape[0] - np.sum(np.sign(np.abs(all_params)))\n",
+    "\n",
+    "            print(\"min/max/mean magnitude and number of zeros:\")\n",
+    "            print(\"  {:.3e}/{:.3e}/{:.3e} and {}\"\\\n",
+    "                  .format(my_min, my_max, my_mean, num_zeros))\n",
+    "\n",
+    "            print(\"training step {}\\n\".format(step))\n",
+    "            print(\"  training loss: {:.3e}\".format(train_loss))\n",
+    "            print(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
+    "            print(\"  validation loss: {:.3e}\".format(val_loss))\n",
+    "            print(\"    validation accuracy: {:.3f}\".format(val_accuracy))\n",
+    "\n",
+    "            np.save(\"./weights/exp2_{}_sd{}.npy\".format(l_type, my_seed), weights)\n",
+    "            np.save(\"./results/exp2_accuracy_{}_sd{}.npy\".format(l_type, my_seed),\\\n",
+    "                    [epochs, train_accuracies, val_accuracies])\n",
+    "            np.save(\"./results/exp2_losses_{}_sd{}.npy\".format(l_type, my_seed),\\\n",
+    "                    [epochs, train_losses, val_losses])\n",
     "\n",
     "\n",
-    "        with open(\"./results/exp2_summary.txt\".format(l_type), 'a') as f:\n",
+    "            with open(\"./results/exp2_summary.txt\".format(l_type), 'a') as f:\n",
     "\n",
-    "            f.write(\"\\n\\n Regularization mode {} with coefficient {}, dropout = {} \\n\"\\\n",
-    "                    .format(l_type, reg_scale, dropout_rate))\n",
-    "            f.write(\"Random seed: {} \".format(my_seed))\n",
-    "            f.write(\"training step {}\\n\".format(step))\n",
-    "            f.write(\"min/max/mean magnitude and number of zeros: \")\n",
-    "            f.write(\"  {:.3e}/{:.3e}/{:.3e} and {}\\n\"\\\n",
-    "              .format(my_min, my_max, my_mean, num_zeros))\n",
-    "            f.write(\"  training loss: {:.3e}\".format(train_loss))\n",
-    "            f.write(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
-    "            f.write(\"  validation loss: {:.3e}\".format(val_loss))\n",
-    "            f.write(\"    validation accuracy: {:.3f}\".format(val_accuracy))\n",
-    "            \n",
-    "        with plt.xkcd(scale=0.3, length=128):\n",
-    "            \n",
-    "            if my_seed == 13:\n",
-    "                plt.figure(figsize=(12,6))\n",
-    "                \n",
-    "            plt.subplot(121)\n",
-    "            plt.plot(epochs, train_losses, color=my_cmap(0.0), lw=2, label=\"training loss\")\n",
-    "            plt.plot(epochs, val_losses, color=my_cmap(0.5), lw=2, label=\"validation loss\")\n",
-    "            plt.axis((0, num_steps, 0.2, 0.80))\n",
-    "            plt.xlabel(\"epoch\")\n",
-    "            plt.ylabel(\"loss\")\n",
-    "            plt.title(\"losses with {}\".format(l_type), fontsize=32)\n",
-    "            plt.legend([\"training loss\", \"validation loss\"])\n",
+    "                f.write(\"\\nexp{} with dim_h={}\\n\".format(exp_num, dim_h))\n",
+    "                f.write(\"\\n Regularization mode {} with coefficient {}, dropout = {} \\n\"\\\n",
+    "                        .format(l_type, reg_scale, dropout_rate))\n",
+    "                f.write(\"Random seed: {} \".format(my_seed))\n",
+    "                f.write(\"training step {}\\n\".format(step))\n",
+    "                f.write(\"min/max/mean magnitude and number of zeros: \")\n",
+    "                f.write(\"  {:.3e}/{:.3e}/{:.3e} and {}\\n\"\\\n",
+    "                  .format(my_min, my_max, my_mean, num_zeros))\n",
+    "                f.write(\"  training loss: {:.3e}\".format(train_loss))\n",
+    "                f.write(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
+    "                f.write(\"  validation loss: {:.3e}\".format(val_loss))\n",
+    "                f.write(\"    validation accuracy: {:.3f}\".format(val_accuracy))\n",
     "\n",
-    "            plt.subplot(122)\n",
-    "            plt.plot(epochs, train_accuracies, color=my_cmap(0.75), lw=2, label=\"training acc.\")\n",
-    "            plt.plot(epochs, val_accuracies, color=my_cmap(1.0), lw=2, label=\"validation acc.\")\n",
-    "            plt.axis((0, num_steps, 0.0, 1.0))\n",
-    "            plt.xlabel(\"epoch\")\n",
-    "            plt.ylabel(\"accuracy\")\n",
-    "            plt.legend([\"training accuracy\", \"validation accuracy\"])\n",
-    "            plt.title(\"accuracy with {}\".format(l_type), fontsize=32)\n",
+    "            with plt.xkcd(scale=0.3, length=128):\n",
     "\n",
-    "            plt.tight_layout()\n",
-    "            \n",
-    "    plt.savefig(\"./assets/exp2_progress_{}.png\".format(l_type))\n",
-    "    plt.show()\n",
+    "                if my_seed == 13:\n",
+    "                    plt.figure(figsize=(12,6))\n",
+    "\n",
+    "                plt.subplot(121)\n",
+    "                plt.plot(epochs, train_losses, color=my_cmap(0.0), lw=2, label=\"training loss\")\n",
+    "                plt.plot(epochs, val_losses, color=my_cmap(0.5), lw=2, label=\"validation loss\")\n",
+    "                plt.axis((0, num_steps, 0.2, 0.80))\n",
+    "                plt.xlabel(\"epoch\")\n",
+    "                plt.ylabel(\"loss\")\n",
+    "                plt.title(\"losses with {}\".format(l_type), fontsize=32)\n",
+    "                plt.legend([\"training loss\", \"validation loss\"])\n",
+    "\n",
+    "                plt.subplot(122)\n",
+    "                plt.plot(epochs, train_accuracies, color=my_cmap(0.75), lw=2, label=\"training acc.\")\n",
+    "                plt.plot(epochs, val_accuracies, color=my_cmap(1.0), lw=2, label=\"validation acc.\")\n",
+    "                plt.axis((0, num_steps, 0.0, 1.0))\n",
+    "                plt.xlabel(\"epoch\")\n",
+    "                plt.ylabel(\"accuracy\")\n",
+    "                plt.legend([\"training accuracy\", \"validation accuracy\"])\n",
+    "                plt.title(\"accuracy with {}\".format(l_type), fontsize=32)\n",
+    "\n",
+    "                plt.tight_layout()\n",
+    "\n",
+    "        plt.savefig(\"./assets/exp{}_progress_{}.png\".format(exp_num, l_type))\n",
+    "        plt.show()\n",
     "    \n"
    ]
   },
