update regularization experiments notebook

--- a/regularization_shapes/regularization_shapes.ipynb
+++ b/regularization_shapes/regularization_shapes.ipynb
@@ -775,7 +775,7 @@
     "else:\n",
     "    list_weights = []\n",
     "\n",
-    "for dim_h in [16, 256]:\n",
+    "for dim_h in [32, 16, 256]:\n",
     "    \n",
     "    exp_num = 3 if dim_h==256 else 2\n",
     "    \n",
@@ -859,8 +859,8 @@
     "            print(\"  validation loss: {:.3e}\".format(val_loss))\n",
     "            print(\"    validation accuracy: {:.3f}\".format(val_accuracy))\n",
     "\n",
-    "            np.save(\"./weights/exp2_{}_sd{}.npy\".format(l_type, my_seed), weights)\n",
-    "            np.save(\"./results/exp2_accuracy_{}_sd{}.npy\".format(l_type, my_seed),\\\n",
+    "            np.save(\"./weights/exp2_h{}_{}_sd{}.npy\".format(dim_h, l_type, my_seed), weights)\n",
+    "            np.save(\"./results/exp2_h{}_accuracy_{}_sd{}.npy\".format(dim_h, l_type, my_seed),\\\n",
     "                    [epochs, train_accuracies, val_accuracies])\n",
     "            np.save(\"./results/exp2_losses_{}_sd{}.npy\".format(l_type, my_seed),\\\n",
     "                    [epochs, train_losses, val_losses])\n",
@@ -906,7 +906,7 @@
     "\n",
     "                plt.tight_layout()\n",
     "\n",
-    "        plt.savefig(\"./assets/exp{}_progress_{}.png\".format(exp_num, l_type))\n",
+    "        plt.savefig(\"./assets/exp2_h{}_progress_{}.png\".format(dim_h, l_type))\n",
     "        plt.show()\n",
     "    \n"
    ]
@@ -916,7 +916,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# generating double descent model size plot\n",
+    "num_params = [64*256*10, 64*16+5*16**2+16*10, 64*32+5*32**2+32*10, 64*256+5*256**2+256*10]\n",
+    "# best_val = [0.951, 0.896, 0.893, 0.970]\n",
+    "noreg_val = [0.95, 0.880, 0.869, 0.933]\n",
+    "error = [1-elem for elem in best_val]\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(num_params, error, \"o\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_params\n"
+   ]
   },
   {
    "cell_type": "code",
