update equation 2 in regularization notebook

--- a/regularization_shapes/regularization_shapes.ipynb
+++ b/regularization_shapes/regularization_shapes.ipynb
@@ -47,7 +47,7 @@
     "An interesting thing happens as we approach the $L_\\infty$ norm, typically pronounced as \"L sup\" which is short for \"supremum norm.\" The $L_\\infty$ function returns the maximum absolute parameter value.\n",
     "\n",
     "$$\n",
-    "L_\\infty = max(|x|)\n",
+    "\\hspace{6cm} L_\\infty = max(|x|) \\hspace{0.2cm}. \\hspace{6cm}(2)\n",
     "$$\n",
     "\n",
     "<img src=\"./assets/norm_sup.png\">\n",
