update bootstraping with Julia demo

--- a/bootstrap_demo/bootstrap_demo.ipynb
+++ b/bootstrap_demo/bootstrap_demo.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Bootstrapping Your Way to Uncertainty with Julia Language (Starring Zygote.jl)\n",
-    "\n"
+    "\n",
+    "We know from the [Universal Approximation Theorem](https://en.wikipedia.org/wiki/Universal_approximation_theorem) (Hornik 1989 [pdf](https://cognitivemedium.com/magic_paper/assets/Hornik.pdf) and Cybenko 1989 [pdf](https://cognitivemedium.com/magic_paper/assets/Cybenko.pdf)) that neural networks with at least one non-linear hidden layer should be able to represent arbitrary well-behaved functions, and indeed in the last decade we've seen that deep neural networks can handle a wide variety of input-output data mappings. However, neural networks don't intrinsicallyy tell us anything about their confidence: while output activation functions like softmax and sigmoid with a range from 0.0 to 1.0 might _seem_ like they naturally represent probabilities, they don't and treating them like they do can be dangerous. At least with regression models, where the output is some continuously valued scalar or vector of numbers, there isn't the same temptation to equate a prediction in the 0.90s as high-confidence inference. Inference for samples that are out-of-distribution with respect to the training data can be especially misleading. \n",
+    "\n",
+    "In this essay we'll look at a simple way to generate uncertainty estimates via training several different models on sub-samples of the training dataset. "
    ]
   },
   {
@@ -20,10 +23,7 @@
     "using PyPlot\n",
     "using Gtk\n",
     "using ImageView\n",
-    "using Zygote\n",
-    "using Base\n",
-    "\n",
-    "include(\"./src/bootstrap_demo.jl\")"
+    "using Zygote\n"
    ]
   },
   {
@@ -32,64 +32,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These Base functions are explicitly imported so that they can be overloaded w/ multiple dispatch variants\n",
+    "\n",
     "import Base.-\n",
     "import Base.*"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TL;DR Version"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = my_sinc2(4096, [-.250, .250])\n",
     "\n",
-    "models = train_bootstrap(x, y, get_mlp, 13)\n",
+    "# uncomment the line below to jump straight into the \n",
+    "include(\"./src/bootstrap_demo.jl\")\n",
     "\n",
-    "val_x, val_y = my_sinc2(128, [-.5, .5])\n",
-    "\n",
-    "val_pred = forward_mlp(val_x, models[1])\n",
-    "\n",
-    "PyPlot.figure()\n",
-    "PyPlot.plot(val_x[:,1], val_y[:,1], \"o\")\n",
-    "\n",
-    "PyPlot.plot(val_x[:,1], val_pred[:,1], \"x\")\n",
-    "PyPlot.title(\"one model\")\n",
-    "PyPlot.show()\n",
-    "\n",
-    "val_pred, val_std = ensemble_prediction(val_x, models)\n",
-    "train_pred, train_std = ensemble_prediction(x, models)\n",
-    "\n",
-    "sort_indices = sortperm(val_x[:,1])\n",
-    "\n",
-    "val_x = val_x[sort_indices]\n",
-    "val_y = val_y[sort_indices]\n",
-    "val_pred = val_pred[sort_indices]\n",
-    "\n",
-    "val_std = val_std[sort_indices]\n",
-    "\n",
-    "sort_indices = sortperm(x[:,1])\n",
-    "x = x[sort_indices]\n",
-    "\n",
-    "y = y[sort_indices]\n",
-    "train_pred = train_pred[sort_indices]\n",
-    "train_std = train_std[sort_indices]\n",
-    "\n",
-    "PyPlot.figure()\n",
-    "PyPlot.plot(val_x[:,1], val_y[:,1], \"o\")\n",
-    "\n",
-    "PyPlot.plot(val_x[:,1], val_pred[:,1], \"x\")\n",
-    "PyPlot.fill_between(val_x[:,1], val_pred.-val_std, val_pred.+val_std, alpha=0.5)\n",
-    "PyPlot.show()\n",
-    "\n",
-    "PyPlot.figure()\n",
-    "PyPlot.plot(x[:,1], y[:,1], \"o\")\n",
-    "\n",
-    "PyPlot.plot(x[:,1], train_pred[:,1], \"x\")\n",
-    "PyPlot.fill_between(x[:,1], train_pred .- train_std, train_pred .+ train_std, alpha=0.5)\n",
-    "PyPlot.show()\n"
+    "train_run()"
    ]
   },
   {
@@ -419,58 +385,82 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "val_x"
+    "## Bootstrap Training"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "mlp = get_mlp(1, 32, 1)\n",
     "\n",
-    "x, y = my_sinc2(1024, [-3.0, 3.])\n",
+    "x, y = my_sinc2(4096, [-.250, .250])\n",
     "\n",
-    "forward_mlp(x, mlp)\n",
+    "models = train_bootstrap(x, y, get_mlp, 13)\n",
     "\n",
-    "get_mlp_loss(x, y, mlp)\n",
+    "val_x, val_y = my_sinc2(128, [-.5, .5])\n",
     "\n",
-    "#dθ = gradient((θ) -> get_loss(x, θ, y), θ);\n",
+    "val_pred = forward_mlp(val_x, models[1])\n",
     "\n",
-    "lr =1e-2\n",
+    "PyPlot.figure()\n",
+    "PyPlot.plot(val_x[:,1], val_y[:,1], \"o\")\n",
     "\n",
-    "grad_mlp = Zygote.gradient((mlp) -> lr * get_mlp_loss(x, y, mlp), mlp)\n",
+    "PyPlot.plot(val_x[:,1], val_pred[:,1], \"x\")\n",
+    "PyPlot.title(\"one model\")\n",
+    "PyPlot.show()\n",
     "\n",
-    "grad_mlp = get_mlp_gradient(x, y, mlp)\n",
+    "val_pred, val_std = ensemble_prediction(val_x, models)\n",
+    "train_pred, train_std = ensemble_prediction(x, models)\n",
     "\n",
-    "mlp = train_mlp(x, y, mlp, 10000, lr);"
+    "sort_indices = sortperm(val_x[:,1])\n",
+    "\n",
+    "val_x = val_x[sort_indices]\n",
+    "val_y = val_y[sort_indices]\n",
+    "val_pred = val_pred[sort_indices]\n",
+    "\n",
+    "val_std = val_std[sort_indices]\n",
+    "\n",
+    "sort_indices = sortperm(x[:,1])\n",
+    "x = x[sort_indices]\n",
+    "\n",
+    "y = y[sort_indices]\n",
+    "train_pred = train_pred[sort_indices]\n",
+    "train_std = train_std[sort_indices]\n",
+    "\n",
+    "PyPlot.figure()\n",
+    "PyPlot.plot(val_x[:,1], val_y[:,1], \"o\")\n",
+    "\n",
+    "PyPlot.plot(val_x[:,1], val_pred[:,1], \"x\")\n",
+    "PyPlot.fill_between(val_x[:,1], val_pred.-val_std, val_pred.+val_std, alpha=0.5)\n",
+    "PyPlot.show()\n",
+    "\n",
+    "PyPlot.figure()\n",
+    "PyPlot.plot(x[:,1], y[:,1], \"o\")\n",
+    "\n",
+    "PyPlot.plot(x[:,1], train_pred[:,1], \"x\")\n",
+    "PyPlot.fill_between(x[:,1], train_pred .- train_std, train_pred .+ train_std, alpha=0.5)\n",
+    "PyPlot.show()\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.3",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.3"
   }
  },
  "nbformat": 4,
